--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   color: var(--clr-text-base);
   font-family: var(--ff-main), sans-serif;
   font-weight: normal;
+  line-height: 1.3;
   font-size: var(--fz-base);
   background-color: var(--clr-background);
   background-image: var(--path-cover-image);
@@ -12,15 +13,18 @@
 }
 
 .header {
+  grid-template-rows: 1fr min-content 1fr;
+}
+
+.decorated-zone {
   position: relative;
   display: grid;
-  grid-template-rows: 1fr min-content 1fr;
   padding: var(--padding-base);
   color: var(--clr-text-heading);
   block-size: 100dvb;
 }
 
-.header::before {
+.decorated-zone::before {
   content: '';
   position: absolute;
   border-inline-end: 1px solid currentColor;
@@ -31,7 +35,7 @@
   inset-inline-end: var(--padding-base);
 }
 
-.header::after {
+.decorated-zone::after {
   content: '';
   position: absolute;
   border-inline-start: 1px solid currentColor;
@@ -99,7 +103,7 @@
   pointer-events: none;
 }
 
-.header__title {
+.title {
   color: var(--clr-text-accent);
   font-weight: bold;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -115,4 +119,172 @@
 .title-decor {
   color: var(--clr-text-contrast);
   background-color: var(--clr-text-heading);
+}
+
+.text-link {
+  text-shadow: 2px 2px 0 var(--clr-text-heading);
+  text-decoration: none;
+}
+
+.text-link:hover {
+  text-decoration: underline;
+}
+
+.text-link:focus {
+  outline: none;
+}
+
+.text-link:focus-visible {
+  outline: 1px solid currentColor;
+}
+
+.content {
+  padding: 40px var(--padding-base);
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.section__title {
+  font-size: var(--fz-base);
+  color: var(--clr-text-heading);
+  margin-block-end: 20px;
+}
+
+.section__text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section__paragraph-subtitle {
+  font-size: var(--fz-base);
+  margin-block-end: 10px;
+}
+
+.section__text-caption {
+  font-size: var(--fz-base);
+}
+
+.section__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section__list-item > .section__paragraph-subtitle {
+  font-weight: normal;
+}
+
+.section__heading {
+  font-size: var(--fz-base);
+  margin-block-end: var(--padding-base);
+}
+
+.section__gallery {
+  display: grid;
+  gap: var(--padding-base);
+}
+
+.section__gallery-item {
+  font-size: 0;
+}
+
+.section__gallery-picture {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  place-items: center;
+}
+
+.footer__title {
+  text-shadow: 2px 2px 0 var(--clr-text-heading);
+}
+
+@media (min-width: 768px) {
+  :root {
+    --padding-base: 20px;
+  }
+
+  .header__title {
+    margin-inline-start: calc(-1 * (var(--padding-base)));
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__subtitle {
+    inline-size: calc((364 / 728) * 100%);
+    justify-self: flex-end;
+  }
+
+  .content {
+    padding-block: 60px;
+    gap: 80px;
+  }
+
+  .section__title {
+    display: inline-block;
+    width: 30.76vi;
+    flex-shrink: 0;
+  }
+
+  .reasons {
+    display: flex;
+    gap: 20px;
+  }
+
+  .solutions {
+    display: flex;
+    gap: 20px;
+  }
+
+  .section__gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 25vi 30vi 41.4vi;
+  }
+
+  .section__gallery-item:nth-child(1) {
+    grid-column: 1 / span 2;
+    grid-row: 1 / 1;
+  }
+  .section__gallery-item:nth-child(2) {
+    grid-row: 1 / span 2;
+  }
+  .section__gallery-item:nth-child(3) {
+    grid-row: 2 / span 2;
+  }
+  .section__gallery-item:nth-child(4) {
+  }
+  .section__gallery-item:nth-child(5) {
+    grid-column: 2 / span 2;
+  }
+}
+
+@media (min-width: 1024px) {
+  .distractions .section__text-container {
+    flex-direction: row;
+  }
+
+  .distractions .section__paragraph {
+    flex: 1;
+  }
+
+  .header__theme-menu {
+    align-self: flex-start;
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .section__gallery {
+    grid-template-rows: 25.4vi 30.8vi 42.2vi;
+  }
 }
