--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,12 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --clr-bg-accent: #ff8dcb;
+  --clr-text-accent: #ffc2e6;
+  --clr-text-base: #353430;
+  --clr-text-heading: #353430;
+  --clr-text-contrast: #353430;
+  --path-cover-image: url('../images/cover-image-light.png');
+}
+
+.page.theme_light .header-decor {
+  display: none;
 }
