--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
   font-weight: normal;
   line-height: 1.3;
   font-size: var(--fz-base);
-  background-color: var(--clr-background);
   background-image: var(--path-cover-image);
   background-repeat: no-repeat;
   background-position: center;
@@ -108,7 +107,7 @@
   font-weight: bold;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 0.825;
-  text-shadow: 4px 4px 0 var(--clr-text-heading);
+  text-shadow: 4px 4px 0 var(--clr-box-shadow);
 }
 
 .header__subtitle {
@@ -118,11 +117,11 @@
 
 .title-decor {
   color: var(--clr-text-contrast);
-  background-color: var(--clr-text-heading);
+  background-color: var(--clr-bg-accent);
 }
 
 .text-link {
-  text-shadow: 2px 2px 0 var(--clr-text-heading);
+  text-shadow: 2px 2px 0 var(--clr-box-shadow);
   text-decoration: none;
 }
 
@@ -259,8 +258,7 @@
   .section__gallery-item:nth-child(3) {
     grid-row: 2 / span 2;
   }
-  .section__gallery-item:nth-child(4) {
-  }
+
   .section__gallery-item:nth-child(5) {
     grid-column: 2 / span 2;
   }
@@ -286,5 +284,35 @@
 
   .section__gallery {
     grid-template-rows: 25.4vi 30.8vi 42.2vi;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --clr-bg-accent: #ff0070;
+    --clr-text-accent: #db00ff;
+    --clr-text-base: #f1b2ce;
+    --clr-text-heading: #ff0070;
+    --clr-text-contrast: #000028;
+    --path-cover-image: url('../images/cover-image-dark.png');
+  }
+
+  .page.theme_dark .header-decor {
+    display: block;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --clr-bg-accent: #ff8dcb;
+    --clr-text-accent: #ffc2e6;
+    --clr-text-base: #353430;
+    --clr-text-heading: #353430;
+    --clr-text-contrast: #353430;
+    --path-cover-image: url('../images/cover-image-light.png');
+  }
+
+  .page.theme_light .header-decor {
+    display: none;
   }
 }
