fixed last issues

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,7 +15,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --clr-bg-base: #000028;
     --clr-bg-accent: #ff0070;
+    --clr-border-btn: rgba(255 0 112 / 0.4);
     --clr-text-accent: #db00ff;
     --clr-text-base: #f1b2ce;
     --clr-text-heading: #ff0070;
@@ -23,7 +25,7 @@
     --path-cover-image: url('../images/cover-image-dark.png');
   }
 
-  .page.theme_dark .header__decor {
+  .header__decor {
     display: flex;
   }
 }
