--- a/styles/light.css
+++ b/styles/light.css
@@ -15,7 +15,9 @@
 
 @media (prefers-color-scheme: light) {
   :root {
+    --clr-bg-base: #fff1f7;
     --clr-bg-accent: #ff8dcb;
+    --clr-border-btn: rgba(50 49 45 / 0.4);
     --clr-text-accent: #ffc2e6;
     --clr-text-base: #353430;
     --clr-text-heading: #353430;
@@ -23,7 +25,7 @@
     --path-cover-image: url('../images/cover-image-light.png');
   }
 
-  .page.theme_light .header__decor {
+  .header__decor {
     display: none;
   }
 }
