tips from reviewer

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@
   text-transform: lowercase;
   background-color: transparent;
   cursor: pointer;
+  appearance: none;
 }
 
 .header__theme-menu-button:hover {
